# StatsUtils.py

./: .gitlab-ci.yml  ReadMe.md  ToDo.tsv  pyproject.toml  tutorial.ipynb
StatsUtils/: __init__.py  core.py  hist.py  plot.py
StatsUtils/dists/: MultivariateGaussian.py  Normal.py  TruncatedNormal.py  empirical.py
StatsUtils/utils/: __init__.py  optimize.py
tests/: tests.py
