[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "StatsUtils"
readme = "ReadMe.md"
description = "These is a temporary package with some routines that I think must be a part of `scipy.stats` and `numpy`, but curently they are not. The end goal is to upsteam as much as possible of this package into `scipy` and get rid of it."
authors = [{name = "KOLANICH"}]
license = {text = "Unlicense"}
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["scipy.stats"]
requires-python = ">=3.4"
dependencies = ["numpy", "scipy"]
dynamic = ["version"]

[project.optional-dependencies]
plot = ["matplotlib"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/StatsUtils.py"

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
